--- a/src/app/call-controls/call-controls.component.scss
+++ b/src/app/call-controls/call-controls.component.scss
@@ -5,7 +5,7 @@
 
     .buttons {
         display: flex;
-        justify-content: space-between;
+        justify-content: space-around;
         width: 220px;
         font-size: 2rem;
 
