--- a/src/styles.scss
+++ b/src/styles.scss
@@ -8,3 +8,5 @@ html, body {
 
     font-family: 'Roboto', sans-serif;
 }
+/* Importing Bootstrap SCSS file. */
+@import '~bootstrap/scss/bootstrap';
