--- a/src/app/landing/landing.component.scss
+++ b/src/app/landing/landing.component.scss
@@ -49,7 +49,7 @@
 			margin-top: 2%;
 			display: flex;
 			justify-content: space-evenly;
-			.card {
+			.custom-card {
 				height: 250px;
 				width: 200px;
 				border: 1px solid #fff;
@@ -92,7 +92,7 @@
 				align-items: center;
 				justify-content: center;
 				flex-direction: column;
-				.card {
+				.custom-card {
 					margin-bottom: 5%;
 				}
 			}
