--- a/src/app/onetoonecall/onetoonecall.component.scss
+++ b/src/app/onetoonecall/onetoonecall.component.scss
@@ -10,7 +10,7 @@
             transform: scaleX(-1);
             height: 100%;
             width: 100%;
-            object-fit: fill;
+            object-fit: cover;
         }
     }
 
@@ -36,5 +36,15 @@
         position: absolute;
         bottom: 40px;
         width: 100%;
+    }
+}
+
+@media screen and (max-width: 480px) {
+    .onetoone {
+        .remote-view {
+            video {
+                object-fit: contain;
+            }
+        }
     }
 }
