--- a/src/app/call-controls/call-controls.component.html
+++ b/src/app/call-controls/call-controls.component.html
@@ -11,6 +11,10 @@
     <div class="hangup-button button" title="Join Call" (click)="hangupCall()">
       ❌
     </div>
+
+    <div class="chat-button button" title="Chat" (click)="openChat()">
+      💬
+    </div>
   </div>
 </div>
 
