--- a/src/app/onetoonecall/onetoonecall.component.html
+++ b/src/app/onetoonecall/onetoonecall.component.html
@@ -1,6 +1,7 @@
 <div class="onetoone">
     <div class="remote-view">
         <video id="remote-view-element" class="video" autoplay></video>
+        <video id="screen-share-view-element" class="video" autoplay></video>
     </div>
     <div class="self-view"
     draggable="true"
