--- a/src/app/call-controls/call-controls.component.html
+++ b/src/app/call-controls/call-controls.component.html
@@ -15,6 +15,10 @@
     <div class="chat-button button" title="Chat" (click)="openChat()">
       💬
     </div>
+    
+    <div class="screen-share-button button" title="Share Screen" (click)="openScreenShare()">
+      🖥️
+    </div>
   </div>
 </div>
 
